# AI-Based-Recruitment-System

./: Dockerfile  README.md  agents.py  app.py  pyproject.toml  requirements.txt  tasks.py  tools.py
data/: job_descriptions.json
